...
                #if os(iOS)
                    .textContentType(.URL)
                    .textInputAutocapitalization(.never)
                    .keyboardType(.URL)
                #endif
                .autocorrectionDisabled()
                .accessibilityIdentifier("service-address")

                TextField(text: $username) {
                    Text("Username")
                }
                #if os(iOS)
                    .textContentType(.username)
...
